--- a/style.css
+++ b/style.css
@@ -71,6 +71,9 @@ button:hover{
         max-width: 350px;
         height:350px;
     }
+    button{
+        margin-top:20px;
+    }
 }
 @media screen and (max-width:440px) {
     .img-container, .img-container-2{
